<resources>
    <string name="accessibility_service_description">Allow AlwaysOn to turn off your screen</string>
    <string name="device_admin_description">Allow AlwaysOn to turn off your screen</string>
    <string name="notification_listener_description">Show notifications on the always on display</string>
    <string name="service_text">AlwaysOn is running in the background</string>
    <string name="service_channel">Service channel</string>
    <string name="err_service_failed">Failed starting service!</string>
    <string name="setup_header">Setup</string>
    <string name="setup_choose_mode">Choose a mode</string>
    <string name="setup_choose_mode_summary">You need to choose a mode for the app. If you are not sure about what you need to choose, leave this setting as is. If your device is rooted, choose root.\n\nPlease note that you have to deactivate the app\'s device admin privileges before uninstalling it.</string>
    <string name="setup_device_admin">Device Admin</string>
    <string name="setup_root">Root</string>
    <string name="setup_root_failed">Root request failed! Please try again or switch mode!</string>
    <string name="device_admin">Device Admin</string>
    <string name="device_admin_summary">You need to activate this device admin or switch to root mode for this app to work.</string>
    <string name="notification_listener_service">Notification Access</string>
    <string name="notification_listener_service_summary">You need to enable notification access for the app to display your notifications on the always on display.</string>
    <string name="setup_draw_over_other_apps">Display over other apps</string>
    <string name="setup_draw_over_other_apps_summary">This permission is required to show the always on display.</string>
    <string name="setup_finish">Finish Setup</string>
    <string name="setup_finish_summary">Everything is set up. Please click continue to finish the setup.</string>
    <string name="setup_continue">Continue</string>
    <string name="setup_error">Something went wrong! Please try again!</string>
    <string name="app_name" translatable="false">AlwaysOn</string>
    <string name="app_by">AlwaysOn by Domi04151309 (Oneplus8Mod)</string>
    <string name="description">AlwaysOn is an app for every device with an AMOLED or OLED display. It keeps your screen on while the time and battery percentage are displayed but it does not drain your battery.
Also, icons appear when you plug in your headphones or start charging your device.
You can customize your always on display and toggle it on or off with quick tiles and widgets.</string>
    <string name="AlwaysOn">Always on display</string>
    <string name="Headset">Headphone animation</string>
    <string name="Charging">Charging animation</string>
    <string name="chargingState_error">Unable to display charging state</string>
    <string name="battery">\??%</string>
    <string name="clock">H:mm</string>
    <string name="clock2">HH\nMM</string>
    <string name="date">EEE, MMM d</string>
    <string name="date2">EEEE, MMM d</string>
    <string name="feature">-</string>
    <string name="percent">%1$d%%</string>
    <string name="charged">%1$d%% Charged</string>
    <string name="shortcut_disabled">Disabled</string>
    <string name="pref_int_failed">This value cannot be used</string>
    <string name="pref">Settings</string>
    <string name="pref_general">General settings</string>
    <string name="pref_enabled">Currently enabled</string>
    <string name="pref_disabled">Currently disabled</string>
    <string name="pref_always_on">Always on display</string>
    <string name="pref_headphones">Headphone animation</string>
    <string name="pref_charging">Charging animation</string>
    <string name="pref_categories">Categories</string>
    <string name="pref_look_and_feel">Look and feel</string>
    <string name="pref_look_and_feel_summary">Settings related to the look and feel</string>
    <string name="pref_ao_watch_face">Watch face</string>
    <string name="pref_ao_watch_face_summary">Settings related to the watch face of the AOD</string>
    <string name="pref_ao_background">Background</string>
    <string name="pref_ao_background_summary">Settings related to the background of the AOD</string>
    <string name="pref_ao_behavior">Behavior</string>
    <string name="pref_ao_behavior_summary">Settings related to the behavior of the app</string>
    <string name="pref_ao_other">Other settings</string>
    <string name="pref_ao_other_summary">Other settings of the app</string>
    <string name="pref_look_and_feel_light">Light mode</string>
    <string name="pref_look_and_feel_light_summary">Changes the look of the app to a light style</string>
    <string name="pref_look_and_feel_hour">Use 12-hour clock</string>
    <string name="pref_look_and_feel_hour_summary_on">Currently used: 12-hour clock</string>
    <string name="pref_look_and_feel_hour_summary_off">Currently used: 24-hour clock</string>
    <string name="pref_look_and_feel_am_pm">Show AM / PM</string>
    <string name="pref_look_and_feel_am_pm_summary">Shows AM / PM when using 12-hour clock</string>
    <string name="pref_look_and_feel_ao">Always on look</string>
    <string name="pref_look_and_feel_ao_summary">Changes the look of the always on display</string>
    <string name="pref_look_and_feel_ao_array_display_0">Google like style</string>
    <string name="pref_look_and_feel_ao_array_display_1">Samsung like style</string>
    <string name="pref_look_and_feel_ao_array_display_2">Second Samsung like style</string>
    <string name="pref_look_and_feel_ao_array_display_3">OnePlus like style</string>
    <string name="pref_ao_showClock">Display the time</string>
    <string name="pref_ao_showDate">Display the date</string>
    <string name="pref_ao_showBatteryIcn">Display a battery icon</string>
    <string name="pref_ao_showBattery">Display the battery percentage</string>
    <string name="pref_ao_showMediainformations">Display mediainformation</string>
    <string name="pref_ao_showNotificationIcons">Display notification icons</string>
    <string name="pref_ao_edgeGlow">Edge glow</string>
    <string name="pref_ao_edgeGlow_summary">Glowing edges when a notification is received</string>
    <string name="pref_ao_glowDuration">Glowing duration (in milliseconds)</string>
    <string name="pref_ao_glowDuration_summary">Duration the edges are glowing</string>
    <string name="pref_ao_glowStyle">Edge glow style</string>
    <string name="pref_ao_glowStyle_summary">Changes the look of the glowing edges</string>
    <string name="pref_ao_vibration">Vibration duration (in milliseconds)</string>
    <string name="pref_ao_vibration_summary">Duration the phone vibrates when you double-tap the screen</string>
    <string name="pref_ao_animation_delay">Animation delay (in minutes)</string>
    <string name="pref_ao_animation_delay_summary">Time between the different positions of the content\nWarning: Too high values can cause screen burn-ins!</string>
    <string name="pref_ao_force_brightness">Force a certain brightness on the AOD</string>
    <string name="pref_ao_force_brightness_summary">Tap to change the forced brightness</string>
    <string name="pref_ao_force_brightness_title">Brightness</string>
    <string name="pref_ao_force_brightness_example">This is how bright the text on your always on display will appear.</string>
    <string name="pref_ao_pocket_mode">Pocket mode</string>
    <string name="pref_ao_pocket_mode_summary">Disables the always on display in your pocket\nWarning: Sensor usage may cause increased battery usage!</string>
    <string name="pref_ao_dnd">Do not disturb</string>
    <string name="pref_ao_dnd_summary">Turns on do not disturb mode while the always on display is running</string>
    <string name="pref_ao_power_saving">Power saving mode (root)</string>
    <string name="pref_ao_power_saving_summary">Turns on the system\'s power saver mode when the always on display is enabled</string>
    <string name="pref_ao_double_tap_disabled">Disable double-tap</string>
    <string name="pref_ao_double_tap_disabled_summary">Disables double-tap to exit the AOD</string>
    <string name="pref_look_and_feel_charging">Charging animation look</string>
    <string name="pref_look_and_feel_charging_summary">Changes the look of the charging animation</string>
    <string name="pref_look_and_feel_charging_array_display_0">Circle style</string>
    <string name="pref_look_and_feel_charging_array_display_1">Flash style</string>
    <string name="pref_look_and_feel_charging_array_display_2">iOS style</string>
    <string name="pref_look_and_feel_hide_display_cutouts">Hide display cutouts</string>
    <string name="pref_look_and_feel_hide_display_cutouts_summary">Hide display cutouts on fullscreen content</string>
    <string name="pref_look_and_feel_orientation">Orientation</string>
    <string name="pref_look_and_feel_orientation_summary">Changes the display\'s orientation</string>
    <string name="pref_look_and_feel_heads_up">Hide heads up notifications (root)</string>
    <string name="pref_look_and_feel_heads_up_summary">Prevents the heads up notifications from showing (experimental)</string>
    <string name="pref_look_and_feel_filter_notifications">Filter notifications</string>
    <string name="pref_look_and_feel_filter_notifications_summary">Choose, which notifications not to show</string>
    <string name="pref_look_and_feel_filter_notifications_explanation">Tap on the entries to block or unblock them</string>
    <string name="pref_look_and_feel_filter_notifications_blocked">Block notifications from</string>
    <string name="pref_look_and_feel_filter_notifications_shown">Notifications available from</string>
    <string name="pref_look_and_feel_filter_notifications_empty">No notifications available</string>
    <string name="pref_look_and_feel_filter_notifications_empty_summary">It seems that there is nothing to show</string>
    <string name="pref_look_and_feel_filter_notifications_unknown">Unknown application</string>
    <string name="pref_look_and_feel_rules">Rules</string>
    <string name="pref_look_and_feel_rules_summary">Control when to show the AOD</string>
    <string name="pref_look_and_feel_rules_charging_state">Charging state</string>
    <string name="pref_look_and_feel_rules_battery_level">Battery level</string>
    <string name="pref_look_and_feel_rules_battery_level_summary">Show only above %1$d%%</string>
    <string name="pref_look_and_feel_rules_battery_level_summary_zero">Show at any battery level</string>
    <string name="pref_look_and_feel_rules_time">Time period</string>
    <string name="pref_look_and_feel_rules_time_summary">Show from %1$s to %2$s</string>
    <string name="pref_look_and_feel_rules_timeout">Timeout</string>
    <string name="pref_look_and_feel_rules_timeout_summary_zero">No timeout has been set</string>
    <string name="pref_permissions">Permissions</string>
    <string name="pref_permissions_summary">Settings related to permissions</string>
    <string name="pref_notification">Notification access</string>
    <string name="pref_notification_summary">Enable or disable notification access</string>
    <string name="pref_draw_over_other_apps">Display over other apps</string>
    <string name="pref_draw_over_other_apps_summary">Enable or disable this permission</string>
    <string name="pref_admin">Device admin</string>
    <string name="pref_admin_summary">Activate this device admin for normal mode</string>
    <string name="pref_root">Request root access</string>
    <string name="pref_root_summary">Enable root access for root mode</string>
    <string name="pref_root_mode">Root mode</string>
    <string name="pref_root_mode_summary">Enables unlocking with fingerprint scanner</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="loading">Loading</string>
    <string name="about">About</string>
</resources>