<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_clock"
        android:key="pref_watch_face"
        android:summary="@string/pref_ao_watch_face_summary"
        android:title="@string/pref_ao_watch_face" />
    <Preference
        android:icon="@drawable/ic_charging"
        android:key="charging_style"
        android:summary="@string/pref_look_and_feel_charging_summary"
        android:title="@string/pref_look_and_feel_charging" />
    <Preference
        android:icon="@drawable/ic_build"
        android:key="rules"
        android:summary="@string/pref_look_and_feel_rules_summary"
        android:title="@string/pref_look_and_feel_rules" />
    <Preference
        android:icon="@drawable/ic_speed"
        android:key="pref_behavior"
        android:summary="@string/pref_ao_behavior_summary"
        android:title="@string/pref_ao_behavior" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_palette"
        android:key="light_mode"
        android:summary="@string/pref_look_and_feel_light_summary"
        android:title="@string/pref_look_and_feel_light" />

</PreferenceScreen>